--- a/index.html
+++ b/index.html
@@ -21,73 +21,70 @@
                 </div>
             </div>
         </header>
-        <div id="home">
-            <div class="floating">
-                <div id="home-nombre">
-                    <h1>David Hernández Larrea</h1>
-                    <hr>
-                    <p>Desarrollador de aplicaciones web</p>
+            <div id="home">
+                <div class="floating">
+                    <div id="home-nombre">
+                        <h1>David Hernández Larrea</h1>
+                        <hr>
+                        <p>Desarrollador de aplicaciones web</p>
+                    </div>
+                </div>
+                <img src="src/galaxia (1).png" id="galaxia">
+            </div>
+        <div id="tarjeta">
+            <div id="sobremi">
+                <div class="izquierda">
+                    <img src="src/default_profile_400x400.png" class="centrar" id="foto">
+                </div>
+                <div class="derecha">
+                    <h1 class="sobremi-derecha">Sobre mí</h1>
+                    <p class="sobremi-derecha">Programador en formación tanto de backend como frontend. Actualmente estoy en 2º en un curso de Desarrollo de aplicaciones web. </p>
+                    <p class="sobremi-derecha">Desde que era pequeño me apasionaba el mundo de la tecnología y la informática. Dedicaba tiempo libre en hacer páginas web y aplicaciones para móvil por mi propia cuenta e incluso llegué a crear videojuegos algo simples. Es por ello que decidí enfocar mis estudios a este campo, para poder llegar a disfrutar de mi trabajo y ser capaz de demostrar mis habilidades al mundo exterior.</p>
                 </div>
             </div>
-            <img src="src/galaxia (1).png" id="galaxia">
-        </div>
-        <div id="sobremi" class="tarjeta">
-            <div class="izquierda">
-                <img src="src/default_profile_400x400.png" class="centrar" id="foto">
+            <div id="lenguajes">
+                <h1 class="habilidades centrar">Mis habilidades y lenguajes</h1>
+                <h2 class="centrar">Frontend</h2>
+                <div id="frontend" class="lenguaje">
+                    <img src="src/html5-logo.png" width="100" height="100" title="HTML5">
+                    <img src="src/css3-logo.png" width="100" height="100" title="CSS3">
+                    <img src="src/js-logo.png" width="100" height="100" title="JavaScript">
+                </div>
+                <h2 class="centrar">Backend</h2>
+                <div id="backend" class="lenguaje">
+                    <img src="src/php-logo.png" width="100" height="100" title="PHP">
+                    <img src="src/sql-logo.png" width="100" height="100" title="SQL">
+                    <img src="src/java-logo.png" width="100" height="100" title="Java">
+                </div>
+                <h2 class="centrar">Otros</h2>
+                <div id="otros" class="lenguaje">
+                    <img src="src/photoshop-logo.png" width="100" height="100" title="Photoshop">
+                    <img src="src/wordpress-logo.png" width="100" height="100" title="Wordpress">
+                </div>
             </div>
-            <div class="derecha">
-                <h1 class="sobremi-derecha">Sobre mí</h1>
-                <p class="sobremi-derecha">Programador en formación tanto de backend como frontend. Actualmente estoy en 2º en un curso de Desarrollo de aplicaciones web. </p>
-                <p class="sobremi-derecha">Desde que era pequeño me apasionaba el mundo de la tecnología y la informática. Dedicaba tiempo libre en hacer páginas web y aplicaciones para móvil por mi propia cuenta e incluso llegué a crear videojuegos algo simples. Es por ello que decidí enfocar mis estudios a este campo, para poder llegar a disfrutar de mi trabajo y ser capaz de demostrar mis habilidades al mundo exterior.</p>
+            <h1 class="proyectos-h1">Proyectos</h1>
+            <div id="proyectos">
+                <div class="proyecto">
+                    <img src="src/eemindful.PNG" class="centrar">
+                    <h1 class="centrar"><a href="https://eemindful.es" target="_blank">eeMindful</a></h1>
+                    <p class="centrar"><i>Hecho con WordPress</i></p>
+                </div>
+                <div class="proyecto">
+                    <img src="src/Holzadac.png" class="centrar">
+                    <h1 class="centrar"><a href="https://holzadac.es" target="_blank">Holzadac</a></h1>
+                    <p class="centrar"><i>Hecho con WordPress</i></p>
+                </div>
             </div>
-        </div>
-        <div id="lenguajes" class="tarjeta">
-            <h1 class="habilidades centrar">Mis habilidades y lenguajes</h1>
-            <h2 class="centrar">Frontend</h2>
-            <div id="frontend" class="lenguaje">
-                <img src="src/html5-logo.png" width="100" height="100" title="HTML5">
-                <img src="src/css3-logo.png" width="100" height="100" title="CSS3">
-                <img src="src/js-logo.png" width="100" height="100" title="JavaScript">
-            </div>
-            <h2 class="centrar">Backend</h2>
-            <div id="backend" class="lenguaje">
-                <img src="src/php-logo.png" width="100" height="100" title="PHP">
-                <img src="src/sql-logo.png" width="100" height="100" title="SQL">
-                <img src="src/java-logo.png" width="100" height="100" title="Java">
-            </div>
-            <h2 class="centrar">Otros</h2>
-            <div id="otros" class="lenguaje">
-                <img src="src/photoshop-logo.png" width="100" height="100" title="Photoshop">
-                <img src="src/wordpress-logo.png" width="100" height="100" title="Wordpress">
-            </div>
-        </div>
-        <h1 class="proyectos-h1 tarjeta">Proyectos</h1>
-        <div id="proyectos">
-            <div class="proyecto tarjeta">
-                <img src="src/default_profile_400x400.png" class="centrar">
-                <h1 class="centrar">GExpenses</h1>
-                <p class="centrar"><i>Hecho con HTML5, CSS3, PHP y JS.</i></p>
-            </div>
-            <div class="proyecto tarjeta">
-                <img src="src/default_profile_400x400.png" class="centrar">
-                <h1 class="centrar">eeMindful</h1>
-                <p class="centrar"><i>Hecho con wordpress</i></p>
-            </div>
-            <div class="proyecto tarjeta">
-                <img src="src/default_profile_400x400.png" class="centrar">
-                <h1 class="centrar">Holzadac</h1>
-                <p class="centrar"><i>Hecho con wordpress</i></p>
-            </div>
-        </div>
-        <div id="contacto" class="tarjeta">
-            <form>
-                <h1>Contacto</h1>
-                <input type="text" rows="1"id="nombre" placeholder="Nombre" disabled>
-                <input type="email" rows="1" id="email" placeholder="Email" disabled>
-                <textarea id="mensaje" rows="4" placeholder="Escribe aquí tu mensaje." disabled></textarea>
-                    <button class="btnForm" type="submit" disabled>Enviar</button>
+            <div id="contacto">
+                <form>
+                    <h1>Contacto</h1>
+                    <input type="text" rows="1"id="nombre" placeholder="Nombre" disabled>
+                    <input type="email" rows="1" id="email" placeholder="Email" disabled>
+                    <textarea id="mensaje" rows="4" placeholder="Escribe aquí tu mensaje." disabled></textarea>
+                        <button class="btnForm" type="submit" disabled>Enviar</button>
 
-            </form>
+                </form>
+            </div>
         </div>
         <footer>
             <p>Hecho con: HTML5, CSS3 y Javascript</p>
