--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="centrar"><i>Hecho con WordPress</i></p>
                 </div>
                 <div class="proyecto">
-                    <img src="src/Holzadac.png" class="centrar">
+                    <img src="src/Holzadac.PNG" class="centrar">
                     <h1 class="centrar"><a href="https://holzadac.es" target="_blank">Holzadac</a></h1>
                     <p class="centrar"><i>Hecho con WordPress</i></p>
                 </div>
@@ -90,7 +90,7 @@
             <p>Hecho con: HTML5, CSS3 y Javascript</p>
             <p>Por: David Hernández Larrea</p>
             <a href="https://www.linkedin.com/in/david-hernandez-larrea/" target="_blank"><img class="icon" src="src/icon-linkedin.png"></a>
-            <a href="https://github.com/Hachenda" target="_blank"><img class="icon" src="src/icon-github.png"></a>
+            <a href="https://hachenda.github.io/portafolio/" target="_blank"><img class="icon" src="src/icon-github.png"></a>
             <a href="mailto:dhernandezla0@gmail.com"><img class="icon" src="src/icon-gmail.png"></a>
         </footer>
         <button onclick="volverArriba()" id="volverArriba" title="Volver a arriba de la página"><img src="src/2883482.png" width="75" height="75"></button>
