--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/stylesheet.css">
-        <title>Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="src/favicon.png">
+        <title>Portafolio</title>
     </head>
     <body>
         <div id="estrellas"></div>
@@ -66,12 +67,12 @@
             <div id="proyectos">
                 <div class="proyecto">
                     <img src="src/eemindful.PNG" class="centrar">
-                    <h1 class="centrar"><a href="https://eemindful.es" target="_blank">eeMindful</a></h1>
+                    <h1 class="centrar"><a href="https://eemindful.es" target="_blank">eeMindful.es</a></h1>
                     <p class="centrar"><i>Hecho con WordPress</i></p>
                 </div>
                 <div class="proyecto">
                     <img src="src/Holzadac.PNG" class="centrar">
-                    <h1 class="centrar"><a href="https://holzadac.es" target="_blank">Holzadac</a></h1>
+                    <h1 class="centrar"><a href="https://holzadac.es" target="_blank">Holzadac.es</a></h1>
                     <p class="centrar"><i>Hecho con WordPress</i></p>
                 </div>
             </div>
