--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p>Hecho con: HTML5, CSS3 y Javascript</p>
             <p>Por: David Hernández Larrea</p>
             <a href="https://www.linkedin.com/in/david-hernandez-larrea/" target="_blank"><img class="icon" src="src/icon-linkedin.png"></a>
-            <a href="https://hachenda.github.io/portafolio/" target="_blank"><img class="icon" src="src/icon-github.png"></a>
+            <a href="https://github.com/Hachenda/portafolio" target="_blank"><img class="icon" src="src/icon-github.png"></a>
             <a href="mailto:dhernandezla0@gmail.com"><img class="icon" src="src/icon-gmail.png"></a>
         </footer>
         <button onclick="volverArriba()" id="volverArriba" title="Volver a arriba de la página"><img src="src/2883482.png" width="75" height="75"></button>
