--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="tarjeta">
             <div id="sobremi">
                 <div class="izquierda">
-                    <img src="src/default_profile_400x400.png" class="centrar" id="foto">
+                    <img src="src/David.png" class="centrar" width="400px" height="400px" id="foto">
                 </div>
                 <div class="derecha">
                     <h1 class="sobremi-derecha">Sobre mí</h1>
@@ -75,10 +75,16 @@
                     <h1 class="centrar"><a href="https://holzadac.es" target="_blank">Holzadac.es</a></h1>
                     <p class="centrar"><i>Hecho con WordPress</i></p>
                 </div>
+                <div class="proyecto">
+                    <img src="src/GExpenses.PNG" class="centrar">
+                    <h1 class="centrar"><a href="https://www.youtube.com/watch?v=dqUw8BtVYjE" target="_blank">GEXpenses</a></h1>
+                    <p class="centrar"><i>Hecho con HTML, CSS, JavaScript, PHP y mySQL</i></p>
+                </div>
             </div>
             <div id="contacto">
                 <form>
                     <h1>Contacto</h1>
+                    <p class="centrar">Puedes enviarme un correo a <a href="mailto:dhernandezla0@gmail.com">dhernandezla0@gmail.com</a></p>
                     <input type="text" rows="1"id="nombre" placeholder="Nombre" disabled>
                     <input type="email" rows="1" id="email" placeholder="Email" disabled>
                     <textarea id="mensaje" rows="4" placeholder="Escribe aquí tu mensaje." disabled></textarea>
